<resources>
    <string name="app_name">UPIICSA Park</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_Estacionamiento1">Estacionamiento de Ingenierías</string>
    <string name="capacidad_inge">Capacidad total: 130 lugares</string>
    <string name="capacidad_pe">Capacidad total: 80 lugares</string>
    <string name="cupo_inge">Lugares disponibles:</string>
    <string name="cupo_pe">Lugares disponibles:</string>
    <string name="titulo_Estacionamiento2">Estacionamiento de Pesados</string>
    <string name="title_activity_estacionamiento">Estacionamiento</string>
    <string name="titulo_qr">Mostrar QR</string>
    <string name="titulo_ajustes">Ajustes</string>
    <string name="titulo_acerca">Acerca de nosotros</string>
    <string name="titulo_compartir">Compartir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mostrar QR</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Ajustes</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Acerca de</string>
    <string name="letrero_qr">Muestra el siguiente QR al vigilante para que puedas acceder al estacionamiento.</string>
    <string name="title_atention">Atención</string>
    <string name="title_exit">Salir</string>
    <string name="title_accept">Aceptar</string>
    <string name="msg_permission">A partir de Android 6.0, se requiere aceptar permisos,\n\n ¿Desea continuar?</string>
</resources>
