<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/showQR"
            android:icon="@drawable/qr"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Comunicanos">
        <menu>
            <item
                android:id="@+id/compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/info"
                android:icon="@drawable/acerca"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
